fix dev json msg handle error

--- a/iot_server/project/msc100/Makefile
+++ b/iot_server/project/msc100/Makefile
@@ -42,6 +42,7 @@ COM_PROJECT_SRC =  \
                 $(PROJECT_DEVMGR_DIR)/ws.c \
                 $(PROJECT_MSGH_DIR)/json_msg_handle.c \
                 $(PROJECT_MSGH_DIR)/json_msg_clt.c \
+                $(PROJECT_DEVMGR_DIR)/common_tbl.c \
                 $(PROJECT_HTTPS_C_DIR)/https_client.c \
                 $(PROJECT_SRC_DIR)/main.cpp
 
